--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-konan.home=/Users/minamoto/ws/.git-trees/compiler-update/dist
+konan.home= #/Users/minamoto/ws/.git-trees/compiler-update/dist
 kotlinx_coroutines_version=1.99.1
